mejora pagina productos

--- a/entradas.html
+++ b/entradas.html
@@ -23,18 +23,18 @@
     <button>Nuevo</button>
     <button>Eliminar</button>
     <button>Filtrar</button>
-    <table border="1">
-        <TR>
+    <table>
+        <tr>
             <th>ID PRODUCTO</th>
             <TH>NOMBRE</TH>
             <th>PRECIO</th>
             <th>FOTO</th>
-        </TR>
-        <TR>
-            <TD>87878</TD>
-            <TD>HUEVOS</TD>
-            <TD>$13.000</TD>
-            <TD><img src=""></TD>
+        </tr>
+        <tr>
+            <td>87878</td>
+            <td>Huevos</td>
+            <td>$13.000</td>
+            <td><img src=""></td>
 
 
     </table>
