--- a/productos.html
+++ b/productos.html
@@ -10,26 +10,28 @@
 
 <body>
     <header>
-        <nav class="navigation">
-            <ul>
-                <a href="#"><img src="img/logopng.png" class="logo"></a>
-                <h1>PoulX</h1>
-            </ul>
-            <ul>
-                <li><a href="#">Entradas</a></li>
-                <li><a href="#">Salidas</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Configuracion</a></li>
-                <li><a href="#">Usuario</a></li>
-            </ul>
-        </nav>
+        <div>
+            <div>
+                <nav class="navigation">
+                    <ul>
+                        <a href="#"><img src="img/logopng.png" class="logomenu"></a>
+                        <h1 class="nombre">PoulX</h1>
+                        <li><a href="#">Entradas</a></li>
+                        <li><a href="#">Salidas</a></li>
+                        <li><a href="#">Productos</a></li>
+                        <li><a href="#">Configuracion</a></li>
+                        <li><a href="#">Usuario</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <div class="buttonaction">
         <button class="buttonnuevo">Nuevo</button>
         <button class="buttoneliminar">Eliminar</button>
         <button class="buttonfiltrar">Filtrar</button>
     </div>
-    
+
     <table>
         <TR>
             <th>ID PRODUCTO</th>
@@ -41,14 +43,14 @@
             <TD>87878</TD>
             <TD>HUEVOS</TD>
             <TD>$13.000</TD>
-            <TD><img src=""></TD>
-            </TR>
-            <tr>
-                <td>6456</td>
-                <TD>Gallina</TD>
+            <TD><img src="/img/huevos.jpg" class="imgproductos"></TD>
+        </TR>
+        <tr>
+            <td>6456</td>
+            <TD>Gallina</TD>
             <TD>$21.000</TD>
-            <TD><img src=""></TD>
-            </tr>
+            <TD><img src="/img/Gallina_ponedora.jpg" class="imgproductos"></TD>
+        </tr>
 
 
     </table>
