--- a/salidas.html
+++ b/salidas.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entradas</title>
+    <title>Salidas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -28,13 +29,13 @@
     </header>
     <div class="buttonaction">
         <button class="buttonnuevo">Nuevo</button>
-        <button class="buttoneliminar">Eliminar</button>
-        <button class="buttonfiltrar">Filtrar</button>
+        <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
+        <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
 
     <table>
         <tr>
-            <th>ID Entrada</th>
+            <th>ID Salida</th>
             <th>Fecha</th>
             <th>Cantidad</th>
             <th>Responsable</th>
