--- a/usuario.html
+++ b/usuario.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entradas</title>
+    <title>Usuario</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="inicio">
     <header>
         <div>
             <div>
@@ -26,35 +26,33 @@
             </div>
         </div>
     </header>
-    <div class="buttonaction">
-        <button class="buttonnuevo">Nuevo</button>
-        <button class="buttoneliminar">Eliminar</button>
-        <button class="buttonfiltrar">Filtrar</button>
+    <div>
+        <img src="/img/person-circle.svg" class="user-image">
     </div>
-
-    <table>
-        <tr>
-            <th>ID Entrada</th>
-            <th>Fecha</th>
-            <th>Cantidad</th>
-            <th>Responsable</th>
-        </tr>
-        <tr>
-            <td>54343</td>
-            <td>2024/09/12</td>
-            <td>10</td>
-            <td>Carlos Suarez</td>
-        </tr>
-        <tr>
-            <td>21341</td>
-            <td>2024/03/12</td>
-            <td>100</td>
-            <td>Carlos Suarez</td>
-        </tr>
-
-
-    </table>
-
+    <div>
+        <p class="usuario">Nombre</p>
+    </div>
+    <div>
+        <h1>Fabian Cañon</h1>
+    </div>
+    <div>
+        <p class="usuario">Identificación</p>
+    </div>
+    <div>
+        <p>234432432422</p>
+    </div>
+    <div>
+        <p class="usuario">Teléfono</p>
+    </div>
+    <div>
+        <p>234432432422</p>
+    </div>
+    <div>
+        <p class="usuario">Perfil</p>
+    </div>
+    <div>
+        <p>Administrador</p>
+    </div>
 
 </body>
 
