--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <input type="password" id="Contraseña" name="Contraseña" required minlength="4" maxlength="8" />
     </div>
     <div>
-        <button class="buttonlogin">Ingresar</button>
+        <a href="entradas.html"> <button class="buttonlogin">Ingresar</button></a>
     </div>
     <div>
         <a href="">Olvide la Contraseña</a>
