--- a/salidas.html
+++ b/salidas.html
@@ -15,13 +15,13 @@
             <div>
                 <nav class="navigation">
                     <ul>
-                        <a href="#"><img src="img/logopng.png" class="logomenu"></a>
+                        <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
-                        <li><a href="#">Entradas</a></li>
-                        <li><a href="#">Salidas</a></li>
-                        <li><a href="#">Productos</a></li>
+                        <li><a href="entradas.html">Entradas</a></li>
+                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="productos.html">Productos</a></li>
                         <li><a href="#">Configuracion</a></li>
-                        <li><a href="#">Usuario</a></li>
+                        <li><a href="usuario.html">Usuario</a></li>
                     </ul>
                 </nav>
             </div>
