--- a/entradas.html
+++ b/entradas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entradas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -14,13 +15,13 @@
             <div>
                 <nav class="navigation">
                     <ul>
-                        <a href="#"><img src="img/logopng.png" class="logomenu"></a>
+                        <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
-                        <li><a href="#">Entradas</a></li>
-                        <li><a href="#">Salidas</a></li>
-                        <li><a href="#">Productos</a></li>
+                        <li><a href="entradas.html">Entradas</a></li>
+                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="productos.html">Productos</a></li>
                         <li><a href="#">Configuracion</a></li>
-                        <li><a href="#">Usuario</a></li>
+                        <li><a href="usuario.html">Usuario</a></li>
                     </ul>
                 </nav>
             </div>
@@ -28,11 +29,11 @@
     </header>
     <div class="buttonaction">
         <button class="buttonnuevo">Nuevo</button>
-        <button class="buttoneliminar">Eliminar</button>
-        <button class="buttonfiltrar">Filtrar</button>
+        <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
+        <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
 
-    <table>
+    <table class="table table-dark table-striped">
         <tr>
             <th>ID Entrada</th>
             <th>Fecha</th>
