--- a/productos.html
+++ b/productos.html
@@ -14,13 +14,13 @@
             <div>
                 <nav class="navigation">
                     <ul>
-                        <a href="#"><img src="img/logopng.png" class="logomenu"></a>
+                        <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
-                        <li><a href="#">Entradas</a></li>
-                        <li><a href="#">Salidas</a></li>
-                        <li><a href="#">Productos</a></li>
+                        <li><a href="entradas.html">Entradas</a></li>
+                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="productos.html">Productos</a></li>
                         <li><a href="#">Configuracion</a></li>
-                        <li><a href="#">Usuario</a></li>
+                        <li><a href="usuario.html">Usuario</a></li>
                     </ul>
                 </nav>
             </div>
@@ -28,8 +28,8 @@
     </header>
     <div class="buttonaction">
         <button class="buttonnuevo">Nuevo</button>
-        <button class="buttoneliminar">Eliminar</button>
-        <button class="buttonfiltrar">Filtrar</button>
+        <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
+        <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
 
     <table>
@@ -41,7 +41,7 @@
         </TR>
         <TR>
             <TD>87878</TD>
-            <TD>HUEVOS</TD>
+            <TD>Huevos</TD>
             <TD>$13.000</TD>
             <TD><img src="/img/huevos.jpg" class="imgproductos"></TD>
         </TR>
