--- a/header.html
+++ b/header.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuario</title>
+    <title>header</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body class="inicio">
     <header>
         <div class="encabezado">
@@ -26,34 +24,5 @@
             </div>
         </div>
     </header>
-    <div>
-        <img src="/img/person-circle.svg" class="user-image"/>
-    </div>
-    <div>
-        <p class="usuario">Nombre</p>
-    </div>
-    <div>
-        <h1>Fabian Cañon</h1>
-    </div>
-    <div>
-        <p class="usuario">Identificación</p>
-    </div>
-    <div>
-        <p>234432432422</p>
-    </div>
-    <div>
-        <p class="usuario">Teléfono</p>
-    </div>
-    <div>
-        <p>234432432422</p>
-    </div>
-    <div>
-        <p class="usuario">Perfil</p>
-    </div>
-    <div>
-        <p>Administrador</p>
-    </div>
-
 </body>
-
 </html>
