--- a/productos.html
+++ b/productos.html
@@ -10,16 +10,15 @@
 
 <body>
     <header>
-        <div>
+        <div class="encabezado">
             <div>
-                <nav class="navigation">
-                    <ul>
+                <nav>
+                    <ul class="ul-navigation">
                         <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
                         <li><a href="entradas.html">Entradas</a></li>
                         <li><a href="salidas.html">Salidas</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a href="#">Configuracion</a></li>
                         <li><a href="usuario.html">Usuario</a></li>
                     </ul>
                 </nav>
