--- a/salidas.html
+++ b/salidas.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salidas</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="encabezado">
             <div>
-                <nav class="navigation">
-                    <ul>
+                <nav>
+                    <ul class="ul-navigation">
                         <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
                         <li><a href="entradas.html">Entradas</a></li>
                         <li><a href="salidas.html">Salidas</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a href="#">Configuracion</a></li>
                         <li><a href="usuario.html">Usuario</a></li>
                     </ul>
                 </nav>
