--- a/entradas.html
+++ b/entradas.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <div class="buttonaction">
-        <button class="buttonnuevo">Nuevo</button>
+        <a href="form-entrada.html"><button class="buttonnuevo">Nuevo</button></a>
         <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
         <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
