--- a/form-entrada.html
+++ b/form-entrada.html
@@ -5,19 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>formulario de entrada</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <form id="Entrada">
-        <label for="id-entrada">id entrada</label>
-        <input type="text" />
-        <label for="fecha">Fecha</label>
-        <input type="date" />
-        <label for="cantidad">Cantidad</label>
-        <input type="number" />
-        <label for="responsable">Responsable</label>
-        <input type="text" />
-    </form>
+    <header>
+        <div class="encabezado">
+            <div>
+                <nav>
+                    <ul class="ul-navigation">
+                        <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
+                        <h1 class="nombre">PoulX</h1>
+                        <li><a href="entradas.html">Entradas</a></li>
+                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="usuario.html">Usuario</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="formulario">
+        <form id="Entrada">
+            <div>
+                <label for="id-entrada">id entrada</label>
+                <input type="text" />
+            </div>
+            <div>
+                <label for="fecha">Fecha</label>
+                <input type="date" />
+            </div>
+            <div>
+                <label for="cantidad">Cantidad</label>
+                <input type="number" />
+            </div>
+            <div>
+                <label for="responsable">Responsable</label>
+                <input type="text" />
+            </div>
+            <div class="button">
+                <button class="button-send">Enviar</button>
+                <button class="button-clean">Limpiar</button>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
