--- a/salidas.html
+++ b/salidas.html
@@ -26,8 +26,9 @@
         </div>
     </header>
     <div class="buttonaction">
-        <button class="buttonnuevo">Nuevo</button>
-        <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
+        <a href="form.salida.html"><button class="buttonnuevo">Nuevo</button></a>
+        
+            <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
         <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
 
