--- a/entradas.html
+++ b/entradas.html
@@ -27,33 +27,35 @@
     </header>
     <div class="buttonaction">
         <a href="form-entrada.html"><button class="buttonnuevo">Nuevo</button></a>
-        <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
         <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
+    <div>
+        <table>
+            <tr>
+                <th>ID Entrada</th>
+                <th>Fecha</th>
+                <th>Cantidad</th>
+                <th>Responsable</th>
+                <th>Opciones</th>
+            </tr>
+            <tr>
+                <td>54343</td>
+                <td>2024/09/12</td>
+                <td>10</td>
+                <td>Carlos Suarez</td>
+                <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+            </tr>
+            <tr>
+                <td>21341</td>
+                <td>2024/03/12</td>
+                <td>100</td>
+                <td>Carlos Suarez</td>
+                <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+            </tr>
 
-    <table class="table table-dark table-striped">
-        <tr>
-            <th>ID Entrada</th>
-            <th>Fecha</th>
-            <th>Cantidad</th>
-            <th>Responsable</th>
-        </tr>
-        <tr>
-            <td>54343</td>
-            <td>2024/09/12</td>
-            <td>10</td>
-            <td>Carlos Suarez</td>
-        </tr>
-        <tr>
-            <td>21341</td>
-            <td>2024/03/12</td>
-            <td>100</td>
-            <td>Carlos Suarez</td>
-        </tr>
 
-
-    </table>
-
+        </table>
+    </div>
 
 </body>
 
