--- a/salidas.html
+++ b/salidas.html
@@ -27,8 +27,6 @@
     </header>
     <div class="buttonaction">
         <a href="form.salida.html"><button class="buttonnuevo">Nuevo</button></a>
-        
-            <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
         <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
 
@@ -38,18 +36,21 @@
             <th>Fecha</th>
             <th>Cantidad</th>
             <th>Responsable</th>
+            <th>Opciones</th>
         </tr>
         <tr>
             <td>54343</td>
             <td>2024/09/12</td>
             <td>10</td>
             <td>Carlos Suarez</td>
+            <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
         </tr>
         <tr>
             <td>21341</td>
             <td>2024/03/12</td>
             <td>100</td>
             <td>Carlos Suarez</td>
+            <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
         </tr>
 
 
