--- a/salidas.html
+++ b/salidas.html
@@ -36,20 +36,29 @@
             <th>Fecha</th>
             <th>Cantidad</th>
             <th>Responsable</th>
+            <th>Detalle</th>
+            <th>Valor Unitario</th>
+            <th>Valor Total</th>
             <th>Opciones</th>
         </tr>
         <tr>
             <td>54343</td>
-            <td>2024/09/12</td>
-            <td>10</td>
-            <td>Carlos Suarez</td>
+            <td>9/8/2024</td>
+            <td>60</td>
+            <td>Jaime Mora</td>
+            <td>Huevos</td>
+            <td>$13000</td>
+            <td>$26000</td>
             <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
         </tr>
         <tr>
             <td>21341</td>
-            <td>2024/03/12</td>
-            <td>100</td>
-            <td>Carlos Suarez</td>
+            <td>9/8/2024</td>
+            <td>90</td>
+            <td>Henry Reyes</td>
+            <td>Huevos</td>
+            <td>$13000</td>
+            <td>$39000</td>
             <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
         </tr>
 
