--- a/productos.html
+++ b/productos.html
@@ -16,10 +16,11 @@
                     <ul class="ul-navigation">
                         <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
-                        <li><a href="entradas.html">Entradas</a></li>
-                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="produccion.html">Producción</a></li>
+                        <li><a href="ventas.html">Ventas</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a href="usuario.html">Usuario</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="usuarios.html">Usuarios</a></li>
                     </ul>
                 </nav>
             </div>
@@ -27,34 +28,28 @@
     </header>
     <div class="buttonaction">
         <button class="buttonnuevo">Nuevo</button>
-        <img class="icon-nav" src="img/trash.svg" alt="Bootstrap" width="32" height="32">
-        <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
     </div>
 
-    <table>
-        <TR>
-            <th>ID PRODUCTO</th>
-            <TH>NOMBRE</TH>
-            <th>PRECIO</th>
-            <th>FOTO</th>
-        </TR>
-        <TR>
-            <TD>87878</TD>
-            <TD>Huevos</TD>
-            <TD>$13.000</TD>
-            <TD><img src="/img/huevos.jpg" class="imgproductos"></TD>
-        </TR>
+    <table class="table">
+        <tr>
+            <th>Id Producto</th>
+            <th>Producto</th>
+            <th>Foto</th>
+            <th>Opciones</th>
+        </tr>
+        <tr>
+            <td>87878</td>
+            <td>Huevos</td>
+            <td><img src="/img/huevos.jpg" class="imgproductos"></td>
+            <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+        </tr>
         <tr>
             <td>6456</td>
-            <TD>Gallina</TD>
-            <TD>$21.000</TD>
-            <TD><img src="/img/Gallina_ponedora.jpg" class="imgproductos"></TD>
+            <td>Gallina</td>
+            <td><img src="/img/Gallina_ponedora.jpg" class="imgproductos"></td>
+            <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
         </tr>
-
-
     </table>
-
-
 </body>
 
 </html>
