--- a/usuario.html
+++ b/usuario.html
@@ -16,11 +16,11 @@
                     <ul class="ul-navigation">
                         <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
-                        <li><a href="entradas.html">Entradas</a></li>
-                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="produccion.html">Producción</a></li>
+                        <li><a href="ventas.html">Ventas</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a href="usuario.html">Usuario</a>
-                        </li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="usuarios.html">Usuarios</a></li>
                     </ul>
                 </nav>
             </div>
