--- a/form-clientes.html
+++ b/form-clientes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario de salida</title>
+    <title>formulario de clientes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,10 +17,10 @@
                         <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
                         <li><a href="produccion.html">Producción</a></li>
-                        <li><a href="ventas.html">Venta</a></li>
+                        <li><a href="ventas.html">Ventas</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="usuarios.html">Usuario</a>
+                        <li><a href="usuarios.html">Usuarios</a>
                         </li>
                     </ul>
                 </nav>
@@ -30,31 +30,36 @@
 
 
     <div class="formulario">
-        <form id="Salida">
+        <form id="agregarCliente">
             <div>
-                <label for="id-salida">id salida</label>
-                <input type="text" />
+                <label for="idcliente">id cliente</label>
+                <input type="text" id="idcliente"/>
             </div>
             <div>
-                <label for="fecha">Fecha</label>
-                <input type="date" />
+                <label for="nombre">Nombre</label>
+                <input type="text" id="name"/>
             </div>
             <div>
-                <label for="cantidad">Cantidad</label>
-                <input type="number" />
+                <label for="telefono">Teléfono</label>
+                <input type="number" id="phone"/>
             </div>
-            <label for="responsable">Responsable</label>
-            <input type="text" />
+            <label for="direccion">Dirección</label>
+            <input type="text" id="direction" />
             <div>
-                <label for="cliente">Cliente</label>
-                <input type="text" />
+                <label for="ciudad">Ciudad</label>
+                <input type="text" id="city" />
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="email" id="email" />
             </div>
             <div class="button">
-                <button class="button-send">Enviar</button>
+                <button class="button-send" onclick="agregarCliente()">Enviar</button>
                 <button class="button-clean">Limpiar</button>
             </div>
         </form>
     </div>
+    <script src="js/clientes.js"></script>
 </body>
 
 </html>
