--- a/index.html
+++ b/index.html
@@ -5,39 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio PoulX</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loginstyle.css">
 </head>
 
 <body class="inicio">
-    <div>
-        <img class="favicon" src="/img/logopng.png" />
+    <div class="login-container">
+        <div class="login-header">
+            <img class="favicon" src="/img/logopng.png" alt="Logo" />
+            <h2>PoulX</h2>
+        </div>
+        <form id="loginForm" onsubmit="return validateForm(event)">
+            <div class="form-group">
+                <label for="email">Correo Electrónico</label>
+                <input type="text" id="email" name="email" placeholder="demo@poulx.com">
+                <small class="error" id="emailError"></small>
+            </div>
+            <div class="form-group">
+                <label for="username">Usuario</label>
+                <input type="text" id="username" name="username" placeholder="admin" />
+                <small class="error" id="usernameError"></small>
+            </div>
+            <div class="form-group">
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" placeholder="123456" />
+                <small class="error" id="passwordError"></small>
+            </div>
+            <button type="submit" class="buttonlogin">Ingresar</button>
+            <a href="forgotpassword.html"><p class="forgotpassword">Olvide la Contraseña</h5></a>
+        </form>
+        <center>
+            <p id="message"></p>
+        </center>
     </div>
-    <div>
-        <h1>PoulX</h1>
-    </div>
-    <form id="loginForm" onsubmit="validarInicio(event)">
-        <div class="usuario">
-            <label for="username">Usuario</label>
-        </div>
-        <div>
-            <input type="text" id="username" required/>
-        </div>
-        <div class="contrasena">
-            <label for="password">Contraseña</label>
-        </div>
-        <div>
-            <input type="password" id="password" required />
-        </div>
-        <div>
-            <a> <button type="submit" class="buttonlogin">Ingresar</button></a>
-        </div>
-        <div>
-            <a href="">Olvide la Contraseña</a>
-        </div>
-
-    </form>
-        <center><p id="message"></p></center>
-        <script src="js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
