--- a/produccion.html
+++ b/produccion.html
@@ -16,41 +16,49 @@
                     <ul class="ul-navigation">
                         <a href="index.html"><img src="img/logopng.png" class="logomenu"></a>
                         <h1 class="nombre">PoulX</h1>
-                        <li><a href="entradas.html">Entradas</a></li>
-                        <li><a href="salidas.html">Salidas</a></li>
+                        <li><a href="produccion.html">Producción</a></li>
+                        <li><a href="ventas.html">Ventas</a></li>
                         <li><a href="productos.html">Productos</a></li>
-                        <li><a href="usuario.html">Usuario</a></li>
+                        <li><a href="clientes.html">Clientes</a></li>
+                        <li><a href="usuarios.html">Usuarios</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <div class="buttonaction">
-        <a href="form-entrada.html"><button class="buttonnuevo">Nuevo</button></a>
-        <img class="icon-nav" src="img/funnel.svg" alt="Bootstrap">
+        <a href="form-produccion.html"><button class="buttonnuevo">Nuevo</button></a>
     </div>
     <div>
-        <table>
+        <table class="table">
             <tr>
                 <th>ID Entrada</th>
-                <th>Fecha</th>
+                <th>Fecha y hora</th>
+                <th>Lote</th>
+                <th>Producto</th>
                 <th>Cantidad</th>
                 <th>Responsable</th>
                 <th>Opciones</th>
             </tr>
             <tr>
                 <td>54343</td>
-                <td>2024/09/12</td>
+                <td>2024/09/12 06:00</td>
+                <td>2</td>
+                <td>Huevos</td>
                 <td>10</td>
                 <td>Carlos Suarez</td>
-                <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+                <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
+                        class="icon-eraser" src="img/trash.svg" alt="borrar"></td>
             </tr>
             <tr>
                 <td>21341</td>
-                <td>2024/03/12</td>
+                <td>2024/03/12 10:00</td>
+                <td>1</td>
+                <td>Huevos</td>
                 <td>100</td>
                 <td>Carlos Suarez</td>
-                <td class="td-opciones"><img class="icon-eraser" src="img/trash.svg" alt="Bootstrap"></td>
+                <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
+                        class="icon-eraser" src="img/trash.svg" alt="borrar"></td>
             </tr>
 
 
