--- a/Perfil.html
+++ b/Perfil.html
@@ -21,6 +21,7 @@
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
                         <li><a href="usuarios.html">Usuarios</a></li>
+                        <li><a href="Perfil.html">Perfil</a></li>
                     </ul>
                 </nav>
             </div>
@@ -30,30 +31,25 @@
         <img src="/img/person-circle.svg" class="user-image"/>
     </div>
     <div>
-        <p class="usuario">Nombre</p>
+        <h2>Nombre</h2>
     </div>
     <div>
         <h1>Fabian Cañon</h1>
     </div>
     <div>
-        <p class="usuario">Identificación</p>
+        <p class="bold">Identificación: </p>
+        <p>1015424291</p>
     </div>
     <div>
-        <p>234432432422</p>
+        <p class="bold">Teléfono: </p>
+        <p>+57 (311) 529 3172 </p>
     </div>
     <div>
-        <p class="usuario">Teléfono</p>
-    </div>
-    <div>
-        <p>234432432422</p>
-    </div>
-    <div>
-        <p class="usuario">Perfil</p>
-    </div>
-    <div>
+        <p class="bold">Perfil: </p>
         <p>Administrador</p>
+        
     </div>
-
+    <div><a href="index.html">Cerrar Sesión</a></div>
 </body>
 
 </html>
