--- a/ventas.html
+++ b/ventas.html
@@ -21,13 +21,14 @@
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
                         <li><a href="usuarios.html">Usuarios</a></li>
+                        <li><a href="Perfil.html">Perfil</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <div class="buttonaction">
-        <a href="form-ventas.html"><button class="buttonnuevo">Nuevo</button></a>
+        <a href="#tituloformulario"><button class="buttonnuevo">Nuevo</button></a>
     </div>
 
     <table class="table">
@@ -69,7 +70,43 @@
 
     </tbody>
     </table>
+    <h3 class="tituloFormulario" id="tituloformulario">Formulario de Ventas</h3>
 
+    <div class="formulario">
+        <form id="agregarVenta">
+            <div>
+                <label for="idventa">id venta</label>
+                <input type="text" id="idventa"/>
+            </div>
+            <div>
+                <label for="fecha">Fecha</label>
+                <input type="date" id="date"/>
+            </div>
+            <div>
+                <label for="cantidad">Teléfono</label>
+                <input type="number" id="quanty"/>
+            </div>
+            <label for="Cliente">Cliente</label>
+            <input type="text" id="Cliente" />
+            <div>
+                <label for="detalle">Detalle</label>
+                <input type="text" id="detalle" />
+            </div>
+            <div>
+                <label for="valorunitario">Valor Unit.</label>
+                <input type="price" id="valorunitario" />
+            </div>
+            <div>
+                <label for="valorTotal">Valor Total</label>
+                <input type="price" id="valortotal" />
+            </div>
+            <div class="button">
+                <button class="button-send" onclick="agregarCliente()">Enviar</button>
+                <button class="button-clean">Limpiar</button>
+            </div>
+        </form>
+    </div>
+    <script src="js/functions.js"></script>
 
 </body>
 
