--- a/produccion.html
+++ b/produccion.html
@@ -21,49 +21,88 @@
                         <li><a href="productos.html">Productos</a></li>
                         <li><a href="clientes.html">Clientes</a></li>
                         <li><a href="usuarios.html">Usuarios</a></li>
+                        <li><a href="Perfil.html">Perfil</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <div class="buttonaction">
-        <a href="form-produccion.html"><button class="buttonnuevo">Nuevo</button></a>
+        <a href="#tituloFormulario"><button class="buttonnuevo">Nuevo</button></a>
     </div>
     <div>
         <table class="table">
-            <tr>
-                <th>ID Entrada</th>
-                <th>Fecha y hora</th>
-                <th>Lote</th>
-                <th>Producto</th>
-                <th>Cantidad</th>
-                <th>Responsable</th>
-                <th>Opciones</th>
-            </tr>
-            <tr>
-                <td>54343</td>
-                <td>2024/09/12 06:00</td>
-                <td>2</td>
-                <td>Huevos</td>
-                <td>10</td>
-                <td>Carlos Suarez</td>
-                <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
-                        class="icon-eraser" src="img/trash.svg" alt="borrar"></td>
-            </tr>
-            <tr>
-                <td>21341</td>
-                <td>2024/03/12 10:00</td>
-                <td>1</td>
-                <td>Huevos</td>
-                <td>100</td>
-                <td>Carlos Suarez</td>
-                <td class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
-                        class="icon-eraser" src="img/trash.svg" alt="borrar"></td>
-            </tr>
-
+            <thead>
+                <tr>
+                    <th>ID Entrada</th>
+                    <th>Fecha y hora</th>
+                    <th>Lote</th>
+                    <th>Producto</th>
+                    <th>Cantidad</th>
+                    <th>Responsable</th>
+                    <th>Opciones</th>
+                </tr>
+            </thead>
+            <tbody id="produccion-body">
+                <tr>
+                    <td scope="row">54343</td>
+                    <td scope="row">2024/09/12 06:00</td>
+                    <td scope="row">2</td>
+                    <td scope="row">Huevos</td>
+                    <td scope="row">10</td>
+                    <td scope="row">Carlos Suarez</td>
+                    <td scope="row" class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
+                            class="icon-eraser" src="img/trash.svg" alt="borrar"></td>
+                </tr>
+                <tr>
+                    <td scope="row">21341</td>
+                    <td scope="row">2024/03/12 10:00</td>
+                    <td scope="row">1</td>
+                    <td scope="row">Huevos</td>
+                    <td scope="row">100</td>
+                    <td scope="row">Carlos Suarez</td>
+                    <td scope="row" class="td-opciones"><img class="icon-eraser" src="img/edit.svg" alt="editar"><img
+                            class="icon-eraser" src="img/trash.svg" alt="borrar"></td>
+                </tr>
+            </tbody>
 
         </table>
     </div>
+    <h3 class="tituloFormulario" id="tituloFormulario">Formulario Entrada de productos</h3>
+    <div class="formulario">
+        <form id="entrada">
+            <div>
+                <label for="id-entrada" required>id entrada</label>
+                <input type="text" id="id-entrada" />
+            </div>
+            <div>
+                <label for="fecha" required>Fecha</label>
+                <input type="datetime-local" id="fecha" />
+            </div>
+            <div>
+                <label for="lote" step="1" min="0" max="5" required>Lote</label>
+                <input type="number" id="lote" />
+            </div>
+            <div>
+                <label for="cantidad" required>Cantidad</label>
+                <input type="number" id="cantidad" />
+            </div>
+            <div>
+                <label for="producto" required>Producto</label>
+                <input type="text" id="producto" />
+            </div>
+            <div>
+                <label for="responsable" required>Responsable</label>
+                <input type="text" id="responsable" />
+            </div>
+            <div class="button">
+                <button type="submit" class="button-send">Enviar</button>
+                <button type="reset" class="button-clean">Limpiar</button>
+            </div>
+        </form>
+    </div>
+    <div id="resultado"></div>
+    <script src="js/entrada.js"></script>
 
 </body>
 
